# server/internal/module/exam/handler/create_exam_handler.go
@@ -8,6 +8,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+//	CreateExam godoc
+//
+//	@Summary		Create a exam
+//	@Description	Create a exam
+//	@Tags			Exam
+//	@Accept			json
+//	@Produce		json
+//	@Param			CreateExamRequest	body		req.CreateExamRequest	true	"CreateExamRequest JSON"
+//	@Success		200	{object}	response.SuccessResponse{data=exam_res.ExamResponse}
+//	@Failure	400 {object} response.ErrorResponse
+//	@Router			/exam [post]
 func (h *examHandlerImpl) CreateExam(c *gin.Context) {
 	var request req.CreateExamRequest
 	if err := c.ShouldBind(&request); err != nil {
