# server/internal/module/exam/handler/update_exam_handler.go
@@ -8,6 +8,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+//	UpdateExam godoc
+//
+//	@Summary		Update a exam
+//	@Description	Update a exam
+//	@Tags			Exam
+//	@Accept			json
+//	@Produce		json
+//	@Param			UpdateExamRequest	body		req.UpdateExamRequest	true	"UpdateExamRequest JSON"
+//	@Success		200	{object}	response.SuccessResponse{data=exam_res.ExamResponse}
+//	@Failure	400 {object} response.ErrorResponse
+//	@Router			/exams/{id} [put]
 func (h *examHandlerImpl) UpdateExam(c *gin.Context) {
 	var request req.UpdateExamRequest
 	if err := c.ShouldBind(&request); err != nil {
